deploy/kustomize/overlays/production/wecom-ha-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-wecom-connector
spec:
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: trpc-wecom-connector
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: trpc-wecom-connector
